syntax = "proto3";
package com.zero_touch.benchmark.services.MessageServiceGen;

option java_multiple_files = true;
option java_package = "com.zero_touch.benchmark.services.MessageServiceGen";
option java_outer_classname = "MessageServiceOuterClass";

service MessageService {
    rpc getMessage (RequestDtoDto) returns (ResponseDtoDto){}
}

message RequestDtoDto {
	string text = 1;
	int64 multiplier = 2;
}
message ResponseDtoDto {
	string response = 1;
	int64 length = 2;
}
